bonus/config/argocd-service-ref.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ref
  namespace: argocd
spec:
  type: ExternalName
  externalName: gitlab-app-service.gitlab.svc.cluster.local
