bonus/config/gitlab-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-app
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-app
  template:
    metadata:
      labels:
        app: gitlab-app
    spec:
      volumes:
        - name: gitlab-config
          hostPath:
            path: /tmp/gitlab-config
        - name: gitlab-logs
          hostPath:
            path: /tmp/gitlab-log
        - name: gitlab-data
          hostPath:
            path: /tmp/gitlab-opt
        - name: gitlab-bonus
          hostPath:
            path: /tmp/gitlab-bonus
      containers:
        - name: gitlab-app
          image: gitlab/gitlab-ee:17.8.0-ee.0
          volumeMounts:
            - name: gitlab-config
              mountPath: /etc/gitlab
          volumeMounts:
            - name: gitlab-logs
              mountPath: /var/log/gitlab
          volumeMounts:
            - name: gitlab-data
              mountPath: /var/opt/gitlab
          volumeMounts:
            - name: gitlab-bonus
              mountPath: /mnt/bonus
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-app-service
  namespace: gitlab
spec:
  type: LoadBalancer
  selector:
    app: gitlab-app
  ports:
    - port: 8080
      targetPort: 80
